# CoreLooper

./: .editorconfig  .gitignore  CMakeLists.txt  License  README.md  build.sh  c  changes.txt  pclinux.cmake  readme.txt  readme_cn.detail.md  readme_cn.md  todo.txt
doc/: ajax.md  (+10 more)
projects/libcorelooper.as/libcorelooper/: CMakeLists.txt  build.gradle  libcorelooper.aar
projects/libcrypt/: CMakeLists.txt  Resource.h  libcrypt.cpp  libcrypt.def  libcrypt.h  libcrypt.rc  libcrypt.vcxproj  libcrypt.vcxproj.filters  stdafx.cpp  stdafx.h  todo.txt
projects/libcrypt.as/libcrypt/: CMakeLists.txt  build.gradle  wipc.keystore
projects/libcrypt/res/: libcrypt.rc2
projects/libcrypt/src/: aes.cpp  base64ex.cpp  bcd.cpp  crc16.cpp  crypthelper.cpp  digestaccessauth.cpp  hmac_sha1.cpp  hmac_sha256.cpp  md5.cpp  md5ex.cpp  tea.cpp
projects/libcrypt/src/openssl/: async_bio.cc  async_bio.h  ossl_shim.cc  packeted_bio.cc  packeted_bio.h  test_config.cc  test_config.h  unittest_openssl.cpp
projects/libcrypt/src/ssl/: arc4.cpp  base64.cpp  bignum.cpp  havege.cpp  rsa.cpp  sha1.cpp  ssl_cli.cpp  ssl_tls.cpp  x509parse.cpp
projects/libcrypt/src/tests/: crypt.unittest.cpp  xxtea.cpp  xxtea.h
projects/libhttp/: CMakeLists.txt  Resource.h  libhttp.cpp  libhttp.def  libhttp.h  libhttp.rc  libhttp.sln  libhttp.vcxproj  libhttp.vcxproj.filters  stdafx.cpp  stdafx.h  todo.txt  测试wolfssl.txt
projects/libhttp.as/libhttp/: CMakeLists.txt  build.gradle
projects/libhttp/res/: libhttp.rc2
projects/libhttp/src/: FileUploadManager.cpp  ajax_exit.cpp  ajax_exit.h  ajax_listajaxcommand.cpp  ajax_listajaxcommand.h  ajax_proc.cpp  ajax_proc.h  ajax_tree.cpp  ajax_tree.h  ajaxcommandhandler.cpp  ajaxhandler.cpp  demohttprequesthandler.cpp  httpacker.cpp  httpackheader.cpp  httpackparser.cpp  httpchunkparser.cpp  httpformfield.cpp  httpformfield_file.cpp  httpget.cpp  httphandler.cpp  httpheader.cpp  httppost.cpp  httppostcommandhandler.cpp  httpposthandler.cpp  httppostparser.cpp  httprequest.cpp  httprequesthandler.cpp  httprequesthandler_ajax.cpp  httprequesthandler_cgi.cpp  httprequesthandler_file.cpp  httprequesthandler_json.cpp  httpserver.cpp  httptool.cpp  jsonhandler.cpp  mime.cpp  posthandler_uploadpicture.cpp  posthandler_uploadvideo.cpp  postjsonmanager.cpp  procmanager.cpp  telnet.cpp  (+8 more)
projects/libhttp/src/tests/: CMakeLists.txt  demohttprequesthandler.cpp  demohttprequesthandler.h  http_unittest.cpp  parser_unittest.h
projects/libxml/: CMakeLists.txt  Resource.h  libxml.def  libxml.rc  libxml.vcxproj  libxml.vcxproj.filters  libxml_vs.cpp  libxml_vs.h  stdafx.cpp  stdafx.h  targetver.h
projects/libxml/res/: libxml.rc2
projects/libxml/src/: xml_requestdownloadfile.cpp  xmlackbase.cpp  xmlparser.cpp
projects/unittest/: CMakeLists.txt  c.sh
projects/unittest/cmake/: googletest-download.cmake  googletest.cmake
projects/unittest/demo/: CMakeLists.txt  example_add.cpp  example_subtract.cpp  main.cpp
projects/unittest/src/: CMakeLists.txt  example.cpp  example.h
projects/wolf/: CMakeLists.txt  readme.md  t21.cmake  testclient.c  user_settings.h
src/: CMakeLists.txt
src/arch/android/: jni_entry.cpp  jnihelper.cpp  jnilooper.cpp  jnimainlooper.cpp
src/arch/linux/: linuxsignal.cpp  looper_linux.cpp  serialport_linux.cpp  sslfilter.cpp  tcpclient_linux.cpp  tcpserver_linux.cpp  udpclient_linux.cpp  udpserver_linux.cpp
src/arch/linux/serial/: serialport_linux.cpp  serialport_linux.h
src/arch/linux/wolfssl/: CMakeLists.txt  config.h  main.c  model-schema.json  one.sln  one.vcxproj  readme.txt
src/arch/windows/: StackWalker.cpp  crashdump.cpp  dbghelper.cpp  handlerwnd.cpp  iocontext.cpp  iocpobject.cpp  looper_windows.cpp  mfcmainlooper.cpp  serialport_windows.cpp  tcpclient_windows.cpp  tcplistener_windows.cpp  tcpserver2_windows.cpp  tcpserver_windows.cpp  udpclient_windows.cpp  udpiocontext.cpp  udpserver_windows.cpp  wndhandler.cpp  wndmanager.cpp
src/arch/windows/tests/: unittest.win.cpp
src/arch/windows/wepoll/: wepoll.test.cpp
src/core/base/: bcdtool.cpp  bytebuffer.cpp  bytetool.cpp  dt.cpp  fieldtracker.cpp  log.cpp  memorylog.cpp  namevalue.cpp  object.cpp  shelltool.cpp  stringtool.cpp  tickdumper.cpp
src/core/base/tests/: CMakeLists.txt  base_unittest.cpp
src/core/file/: dumpfile.cpp  file.cpp  filefinder.cpp  ini.cpp  inifile.cpp  virtualfolder.cpp
src/core/file/tests/: CMakeLists.txt  file.unittest.cpp  file_unittest.cpp  ini.tests.cpp
src/core/looper/: asynctask.cpp  asynctasklooper.cpp  filelogger.cpp  handler.cpp  handlerex.cpp  handlerinternaldata.cpp  handlerinternaldata.h  looper.cpp  looperimpl.cpp  looperinternaldata.cpp  looperinternaldata.h  looperpool.cpp  message.inl  procnode.cpp  profiler.cpp  timerextrainfo.h  timermanager.cpp  timermanager.h  timernode.h
src/core/looper/tests/: CMakeLists.txt  baselooper_unittest.cpp  looper.test.cpp
src/core/net/: bindwrapper.cpp  bindwrapper.h  channel.cpp  dnser.cpp  dnslooper.cpp  nettool.cpp  simpleconnect.cpp  socktool.cpp  speedcounter.cpp  tcpclient.cpp  tcpserver.cpp  udpserver.cpp  urltool.cpp
src/core/net/tests/: test_dnser.cpp  test_udp.cpp
src/core/protocol/ctp/: commontextprotocol_impl.cpp  commontextprotocol_impl.h  commontextprotocol_impl2.cpp  commontextprotocol_impl2.h
src/core/protocol/jcp/: jcp.client.cpp  jcp.protocol.cpp  jcp.test.cpp
src/core/protocol/sctp/: cbundle.c  cbytebuffer.c  ccrc.c  csctp.c  sctp.cpp  sctpclient.cpp  sctphandler.c  tool.c
src/core/string/: stringparam.cpp  textprotocol.cpp  textseparator.cpp  utf8tool.cpp  xmlstring.cpp
src/core/string/tests/: CMakeLists.txt  baselooper_unittest.cpp
src/core/thread/: autolock.cpp  criticalsection.cpp  event.cpp
src/core/zltoolkit/: readme.txt
src/core/zltoolkit/Network/: Buffer.cpp  Buffer.h  Socket.cpp  TcpClient_zl.cpp  TcpServer_zl.cpp  TcpSession.cpp  sockutil.cpp
src/core2/: core2.inl  core2.test.cpp  handler2.cpp  handler2.h  loger2.cpp  loger2.h  loghandler_dt.cpp  loghandler_dt.h  loghandler_file.cpp  loghandler_file.h  looper2.cpp  looper2.h  readme.md
src/core2/doc/: corelooper2.md
(+1026 files in other folders)
